--- a/app/styles/login.css
+++ b/app/styles/login.css
@@ -70,14 +70,14 @@ input:-webkit-autofill {
     transition: .3s;
 }
 
-.container {
-    position: relative;
-    margin: 0 auto;
-    width: 480px;
-    height: 140px;
+/*.container {*/
+    /*position: relative;*/
+    /*margin: 0 auto;*/
+    /*width: 480px;*/
+    /*height: 140px;*/
     /*background-color: #333;*/
-    border-radius: 8px;
-}
+    /*border-radius: 8px;*/
+/*}*/
 
 .logo{
     width: 60%;
