clicking on the sign in button takes you to the dash

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,7 +16,7 @@
         <img src="images/logo.png" class="logo">
     </div>
 
-    <form action="#" class="form-horizontal" autocomplete="off" method="POST" id="fade">
+    <form class="form-horizontal" autocomplete="off" method="POST" ng-submit="gotoDash();" id="fade" novalidate>
         <div class="control-group s_field" id="username_field">
             <!--<label class="control-label" for="username">Email</label>-->
             <div class="controls">
