adding user uploaded files

--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -51,9 +51,13 @@
             <li><span class="file-tidbit">{{totalFileSize}}kb</span></li>
             <li><span class="file-tidbit">{{userAllTimeFiles}} delivered</span></li>
         </ul>
+    </div>
 
-
-
+    <div class="files-section">
+        <user-upload file=files[0]></user-upload>
+        <user-upload file=files[1]></user-upload>
+        <user-upload file=files[2]></user-upload>
+        <user-upload file=files[3]></user-upload>
     </div>
 
 </div>
