--- a/app/styles/userUpload.css
+++ b/app/styles/userUpload.css
@@ -49,16 +49,15 @@
 
     .file-info .file-info-bit {
         float: left;
+        min-width: 100px;
+        margin-right: 30px;
     }
 
-    /*.file-info .downloads {*/
-        /*float: left;*/
-    /*}*/
+.fa-circle {
+    margin-right: 3px;
+    font-size: 10px;
+}
 
-    /*.file-info .password {*/
-        /*float: left;*/
-    /*}*/
-
-    /*.file-info .time {*/
-        /*float: left;*/
-    /*}*/
+.pw-icon {
+    margin-right: 5px;
+}
