--- a/app/styles/userUpload.css
+++ b/app/styles/userUpload.css
@@ -49,7 +49,7 @@
 
     .file-info .file-info-bit {
         float: left;
-        min-width: 100px;
+        min-width: 130px;
         margin-right: 30px;
     }
 
@@ -60,4 +60,12 @@
 
 .pw-icon {
     margin-right: 5px;
+}
+
+
+
+.file-size {
+    margin-left: 10px;
+    margin-top: 65px;
+    font-size: 12px;
 }
