--- a/app/styles/userUpload.css
+++ b/app/styles/userUpload.css
@@ -62,10 +62,56 @@
     margin-right: 5px;
 }
 
-
-
 .file-size {
     margin-left: 10px;
     margin-top: 65px;
     font-size: 12px;
 }
+
+.delete {
+    float:right;
+    height: 98px;
+    width: 30px;
+    margin-top: -9px;
+    margin-right:-9px;
+    background: rgb(64, 71, 86);
+    color: rgb(95, 105, 119);
+}
+
+    .delete i {
+        margin-top: 40px;
+        margin-left: 6px;
+    }
+
+.copy {
+    float: right;
+    width: 100px;
+    height: 98px;
+    margin-top: -9px;
+}
+
+    .copy p {
+        color: white;
+        margin-top: 36px;
+        margin-left: 30px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
