--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -13,7 +13,7 @@
                 <li><a href="#">Expiring</a></li>
 
                 <li class="dropdown pull-right">
-                    <a class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
+                    <a href class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -23,7 +23,7 @@
                     </ul>
                 </li>
 
-                <li class="pull-right"><a href="#" class="small-link">Hot Keys</a></li>
+                <li class="pull-right"><a href ng-click="toggleCheatSheet()" class="small-link">Hot Keys</a></li>
             </ul>
 
         </div>
