--- a/app/styles/dashboard.css
+++ b/app/styles/dashboard.css
@@ -83,3 +83,34 @@ ul.horizontal li {
 .files-section > div{
     margin-top: 10px;
 }
+
+.drop-zone {
+    display: none;
+    z-index: 1000;
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+}
+
+.drop-zone span {
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    width: 200px;
+    margin-left: -100px;
+}
+
+.drop-zone.drop-hover {
+    display: block;
+    background-color: rgba(220,220,220,.8);
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
+    border:5px solid red;
+}
+
+.drop-zone.drop-hover span {
+    display: inline-block;
+}
