--- a/app/views/login.html
+++ b/app/views/login.html
@@ -16,11 +16,11 @@
         <img src="images/logo.png" class="logo">
     </div>
 
-    <form class="form-horizontal" autocomplete="off" method="POST" ng-submit="gotoDash();" id="fade" novalidate>
+    <form class="form-horizontal" autocomplete="off" method="POST" ng-submit="login();" id="fade" novalidate>
         <div class="control-group s_field" id="username_field">
             <!--<label class="control-label" for="username">Email</label>-->
             <div class="controls">
-                <input type="text" id="username" name="username" value="" placeholder="Email" class="input-xlarge"  autocomplete="off">
+                <input type="text" id="username" name="username" ng-model="username" value="" placeholder="Email" class="input-xlarge"  autocomplete="off">
                 <!--<span class="help-block">Required</span>-->
             </div>
         </div>
@@ -28,7 +28,7 @@
         <div class="control-group s_field" id="password_field">
             <!--<label class="control-label" for="password">Password</label>-->
             <div class="controls">
-                <input type="password" id="password" name="password" placeholder="Password" class="input-xlarge"  autocomplete="off">
+                <input type="password" id="password" name="password" ng-model="password" placeholder="Password" class="input-xlarge"  autocomplete="off">
                 <!--<span class="help-block">Required</span>-->
             </div>
         </div>
