--- a/app/styles/userUpload.css
+++ b/app/styles/userUpload.css
@@ -1,13 +1,16 @@
 .outer-container {
     position: relative;
+    display: block;
     width: 96%;
     height: 100px;
-    background-color: rgba(71, 81, 97, .9);
-    margin: 3px auto;
+    /*background-color: rgba(71, 81, 97, .9);*/
+    /*margin: 3px auto;*/
     -webkit-box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
     box-shadow:inset 0 0 0 1px rgba(62,66,75,1);
     padding: 10px;
     color: rgb(135, 152, 170);
+    bottom:100px;
+    left:0;
 }
 
 .file-preview {
@@ -96,8 +99,21 @@
         margin-left: 30px;
     }
 
+.progress-background {
+    display: block;
+    height: 100px;
+    width: 96%;
+    background-color: rgba(71, 81, 97, .9);
+}
 
+.progress {
+    background-color: rgb(71,81,97);
+    height: 100%;
+}
 
+.progress-bar {
+    background-color: rgba(67, 76, 92, .9);
+}
 
 
 
