--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -2,6 +2,13 @@
      ng-file-drop="onFileSelect($files)"
      ng-file-drag-over-class="drop-hover" >
     <span>drop files here</span>
+
+    <a href="javascript:;" class="animatedBorderBox">
+  <div class="background"></div>
+  <div class="content">HOVER</div>
+</a>
+
+
 </div>
 
 <nav class="navbar navbar-default" role="navigation">
@@ -18,7 +25,7 @@
                 <li><a href="#">Downloads</a></li>
                 <li><a href="#">Expiring</a></li>
 
-                <li class="dropdown pull-right">
+                <li class="dropdown pull-right white">
                     <a href class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                         <li><a href="#">Action</a></li>
