--- a/app/styles/login.scss
+++ b/app/styles/login.scss
@@ -1,6 +1,6 @@
 body {
     background: #455263;
-    background-image: (./images/dot_path.png);
+    background-image: url(/images/dot_path.png);
     font-family: helvetica neue,helvetica light,helvetica,arial;
     font-weight: 300;
     
