--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,3 +1,5 @@
+<link href="styles/dashboard.css" rel="stylesheet"/> 
+
 <div class="drop-zone"
      ng-file-drop="onFileSelect($files)"
      ng-file-drag-over-class="drop-hover" >
