--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -42,6 +42,11 @@ body {
   border-top: 1px solid #e5e5e5;
 }
 
+.bottom_color {
+background-image: linear-gradient(90deg, #49cca6, #1fb4a9);
+height: 10px;
+}
+
 .container-narrow > hr {
   margin: 30px 0;
 }
