Mo Changes, Less Prooblems

--- a/app/styles/landing.scss
+++ b/app/styles/landing.scss
@@ -483,14 +483,14 @@ footer {
 
 p.us {
 	color: white;
-	margin-top: 8px;
+	margin-top: -16px;
 }
 
 .footer-author img{
   float: left;
 }
-.footer-author p {
-  margin: 0px 0px 8px;
+.footer-copyright p {
+margin: 0px 0px 8px;
 }
 
 .footer-copyright {
