--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,3 +1,5 @@
+<link href="styles/landing.css" rel="stylesheet"/>
+
 <div id="mobile-nav">
     <div class="container clearfix">
         <div>
@@ -170,12 +172,12 @@
 
 <footer>
     <div class="container">
-        <div class="footer-author">
+        <div class="footer-author col-md-6">
             <img src="images/logo_circ.png">
             <p>made by</p>
             <p class="us">Eliot Fowler + Andrew Acree</p>
         </div>
-        <div class="footer-copyright">
+        <div class="footer-copyright col-md-6">
             <p class="copyright">© 2014 Just Cause. All Rights Reserved. </p>
             <ul class="footer-action">
                 <li><a class="button small" href="#">Privacy Policy</i></a></li>
