--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -45,6 +45,9 @@ body {
 .bottom_color {
 background-image: linear-gradient(90deg, #49cca6, #1fb4a9);
 height: 10px;
+position: fixed;
+width: 100%;
+bottom: 0px;
 }
 
 .container-narrow > hr {
