--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -1,8 +1,6 @@
 <link href="styles/dashboard.css" rel="stylesheet"/> 
 
-<div class="drop-zone"
-     ng-file-drop="onFileSelect($files)"
-     ng-file-drag-over-class="drop-hover" >
+<div class="drop-zone ng-scope" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="drop-hover" style="display: none;">
     <span>drop files here</span>
 
     <a href="javascript:;" class="animatedBorderBox">
@@ -18,14 +16,18 @@
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
+
+
             <ul class="nav navbar-nav">
                 <a class="navbar-brand pull-left" href="#"><img src="images/logo.png" class="logo"></a>
 
                 <li class="active"><a href="#"><i class="fa fa-bars fa-lg"></i></a></li>
                 <li><a href="#"><i class="fa fa-th-large fa-lg"></i></a></li>
                 <li class="sort-active"><a href="#">Date</a></li>
+<!--
                 <li><a href="#">Downloads</a></li>
                 <li><a href="#">Expiring</a></li>
+-->
 
                 <li class="dropdown pull-right white">
                     <a href class="dropdown-toggle" data-toggle="dropdown">Andrew <span class="caret"></span></a>
