--- a/src/app/dashboard/dashboard.tpl.html
+++ b/src/app/dashboard/dashboard.tpl.html
@@ -1,14 +1,12 @@
 <link href="assets/dashboard.css" rel="stylesheet"/>
 
-<div class="drop-zone ng-scope" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="drop-hover" style="display: none;">
+<div class="drop-zone ng-scope" ng-file-drop="onFileSelect($files)" ng-file-drag-over-class="drop-hover">
     <span>drop files here</span>
 
     <a href="javascript:;" class="animatedBorderBox">
         <div class="background"></div>
         <div class="content">HOVER</div>
     </a>
-
-
 </div>
 
 <nav class="navbar navbar-default" role="navigation">
