--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -1,149 +1,149 @@
 /* Navbar */
 
 .navbar {
-    border-radius: 0px;
-    background-color: rgb(65,74,91);
-    border: 0px;
-    margin-bottom: 0px;
+  border-radius: 0px;
+  background-color: rgb(65,74,91);
+  border: 0px;
+  margin-bottom: 0px;
 }
 
 .navbar-brand {
-    padding: 0px;
+  padding: 0px;
 }
 
 .navbar-brand img{
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .small-link {
-    font-size: 12px;
+  font-size: 12px;
 }
 
 .navbar-nav {
-    width: 100%;
-    text-align: center;
+  width: 100%;
+  text-align: center;
 }
 .navbar-nav li {
-    float: none;
-    display: inline-block;
+  float: none;
+  display: inline-block;
 }
 
 .navbar-nav li a{
-        color: #646f7e;
+  color: #646f7e;
 }
 
 .navbar-default .navbar-nav > .active > a {
-    background-color: #455263;
-    color:#45caa7 !important;
+  background-color: #455263;
+  color:#45caa7 !important;
 }
 
 .sort-active a {
-    color: #45caa7 !important;
+  color: #45caa7 !important;
 }
 
 ul.nav li a {
-    color: #646f7e !important;
+  color: #646f7e !important;
 }
 
 ul.nav li a:hover {
-    color: #45caa7 !important;
+  color: #45caa7 !important;
 }
 
 /* Top Info Section */
 
 #files-information {
-    position: relative;
-    height: 40px;
-    margin-left: 2px;
-    color: #a8b0be;
+  position: relative;
+  height: 40px;
+  margin-left: 2px;
+  color: #a8b0be;
 }
 
 ul.horizontal {
-    display: inline;
-    float: left;
-    position: absolute;
-    left: 10px;
+  display: inline;
+  float: left;
+  position: absolute;
+  left: 10px;
 }
 
 ul.horizontal li {
-    display: inline;
-    margin-right: 15px;
-    color: #a8b0be;
-    font-size: 14px;
-    line-height: 40px;
+  display: inline;
+  margin-right: 15px;
+  color: #a8b0be;
+  font-size: 14px;
+  line-height: 40px;
 }
 
 .center-wrapper {
-    position: relative;
-    left: 50%;
-    float: left;
+  position: relative;
+  left: 50%;
+  float: left;
 }
 
 .center-subheader {
-    position: relative;
-    left: -50%;
-    float: left;
-    margin-top: 10px;
+  position: relative;
+  left: -50%;
+  float: left;
+  margin-top: 10px;
 }
 
 .center-subheader button {
-    background: rgb(68, 74, 86);
-    border: 0;
-    color: rgb(141,147,158);
+  background: rgb(68, 74, 86);
+  border: 0;
+  color: rgb(141,147,158);
 }
 
 .files-section > div{
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .drop-zone {
-    z-index: 0;
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
+  z-index: 0;
+  position: fixed;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
 }
 
 .drop-zone span {
-    display: none;
-    height: 200px;
-    width: 200px;
-    padding-top: 90px;
-    vertical-align: middle;
-    background: rgba(65, 74, 91, 0.81);
-    text-align: center;
-    box-shadow: 0px 0px 24px rgb(42, 51, 66);
-    margin: 30vh auto;
-    transition: .3s ease-out;
+  background: white;
+  height: 200px;
+  width: 200px;
+  padding-top: 90px;
+  vertical-align: middle;
+  background: rgba(65, 74, 91, 0.81);
+  text-align: center;
+  box-shadow: 0px 0px 24px rgb(42, 51, 66);
+  margin: 30vh auto;
+  transition: .3s ease-out;
 }
-    .drop-zone span:hover {
-    background: #45CAA7;
-    }
+.drop-zone span:hover {
+  background: #45CAA7;
+}
 
 .drop-zone.drop-hover {
-    display: block;
-    background-color: rgba(50, 57, 71, 0.75);
-    color: white;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    /* box-shadow: inset 0px 0px 0px black; */
-    filter: blur(20px) grayscale(20%);
-    /* -webkit-filter: blur(5px); */
+  display: block;
+  background-color: rgba(50, 57, 71, 0.75);
+  color: white;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  /* box-shadow: inset 0px 0px 0px black; */
+  filter: blur(20px) grayscale(20%);
+  /* -webkit-filter: blur(5px); */
 
 }
 
 .drop-zone.drop-hover span {
-    display: table;
+  display: table;
 }
 
 .file-in-files {
-    height: 100px;
+  height: 100px;
 }
 
 .container {
-    z-index: 500;
+  z-index: 500;
 }
 
 
@@ -165,7 +165,7 @@ ul.horizontal li {
 
   &:hover {
     color: spin(#0e6d82, 15);
-    
+
     .background {
       background-position: 100px 0;
     }
