--- a/src/app/download/download.tpl.html
+++ b/src/app/download/download.tpl.html
@@ -1,7 +1,7 @@
 <link href="assets/download.css" rel="stylesheet"/>
 
-<div class="pigion-ad">
-    <img src="assets/images/logo_circ.png" class="logo">
+<div class="pigion-ad col-xs-12 col-sm-6">
+    <img src="assets/images/p_download_logo.png" class="logo">
 
     <div class="tagline">
         <span>The last share tool you</span>
@@ -9,11 +9,11 @@
     </div>
 
     <div class="learn-more">
-        <a type="button" href="http://pigion-web.herokuapp.com" class="btn btn-lg btn-success">Learn More</a>
+        <a type="button" href="http://pigion-web.herokuapp.com" class="btn btn-lg btn-success download">Learn More</a>
     </div>
 </div>
 
-<div class="file-container">
+<div class="file-container col-xs-12 col-sm-6">
     <div class="file-type-container">
 
     </div>
@@ -24,6 +24,6 @@
     </div>
 
     <div class="file-download">
-        <a type="button" ng-href={{fileInfo.fullUrl}} class="btn btn-lg btn-success">Download</a>
+        <a type="button" ng-href={{fileInfo.fullUrl}} class="btn btn-lg btn-success download">Download</a>
     </div>
 </div>
