--- a/src/app/landing/landing.tpl.html
+++ b/src/app/landing/landing.tpl.html
@@ -118,11 +118,11 @@
 
     <div class="content container">
         <div class="row">
-            <div class="col-sm-5">
+            <div class="col-sm-6">
                 <h3>Host your own data, but let us carry it</h3>
             </div>
 
-            <div class="col-sm-4 col-sm-offset-3">
+            <div class="col-sm-4 col-sm-offset-2">
                 <h1>20,476</h1>
                 <span>Pigion links sent</span>
             </div>
@@ -180,8 +180,8 @@
         <div class="footer-copyright col-md-6">
             <p class="copyright">© 2014 Just Cause. All Rights Reserved. </p>
             <ul class="footer-action">
-                <li><a class="button small" href="#">Privacy Policy</i></a></li>
-                <li><a id="top" class="button small" href="#">Terms of Service</a></li>
+                <li><a class="small" href="#">Privacy Policy</i></a></li>
+                <li><a id="top" class="small" href="#">Terms of Service</a></li>
             </ul>
         </div>
     </div>
