--- a/src/styles/dashboard.scss
+++ b/src/styles/dashboard.scss
@@ -11,8 +11,9 @@
   padding: 0px;
 }
 
-.navbar-brand img{
-  margin-top: 10px;
+.navbar-brand img {
+margin-top: 10px;
+float: left;
 }
 
 .small-link {
@@ -24,7 +25,7 @@
   text-align: center;
 }
 .navbar-nav li {
-  float: none;
+//   float: none;
   display: inline-block;
 }
 
@@ -48,6 +49,12 @@ ul.nav li a {
 ul.nav li a:hover {
   color: #45caa7 !important;
 }
+
+.navbar-default .navbar-nav > .active > a:hover{
+color: #555;
+background-color: #455263;
+}
+
 
 /* Top Info Section */
 
