--- a/src/styles/landing.scss
+++ b/src/styles/landing.scss
@@ -68,6 +68,7 @@ a {
 
 a:hover {
   color: #45caa7;
+  text-decoration: none;
   transition: .3s ease;
 }
 
@@ -151,11 +152,16 @@ nav ul li:last-of-type {
 }
 
 nav ul li a {
-  color: #aeaeae;
+color: #aeaeae;
+padding: 5px 14px;
+border-radius: 5px;
 }
 
+
 nav ul li a:hover, nav ul li a.current {
+background: rgba(52, 52, 61, 0.31);
   color: #45caa7;
+  text-decoration: none;
 }
 
 
@@ -481,6 +487,11 @@ footer {
   text-align: left;
 }
 
+footer p {
+font-size: .9em;
+margin-top: 9px;
+}
+
 p.us {
   color: white;
   margin-top: -16px;
@@ -490,7 +501,7 @@ p.us {
   float: left;
 }
 .footer-copyright p {
-  margin: 0px 0px 8px;
+	margin: 3px 0px 1px;
 }
 
 .footer-copyright {
@@ -499,9 +510,6 @@ p.us {
   margin-top: 6px;
 }
 
-.footer-copyright p{
-  margin: 0px 0px -7px;
-}
 
 .footer-action { padding-bottom: 15px; }
 .footer-action li { display: inline-block; margin-right: 15px; }
