--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -1,9 +1,11 @@
 body {
-    background: #455263;
-    background-image: url(images/dot_path.png);
-    font-family: helvetica neue,helvetica light,helvetica,arial;
-    font-weight: 300;
-    
+background: #455263;
+background-image: url(images/dot_path.png);
+font-family: helvetica neue,helvetica light,helvetica,arial;
+font-weight: 300;
+background-size: cover;
+background-repeat: no-repeat;
+background-position: 80% 170px;
 }
 
 input:-webkit-autofill {
@@ -244,10 +246,11 @@ input:focus {
 .file-title {
     display: inline-block;
     margin-left: 10px;
-    font: Helvetica extrabold;
     float:left;
     font-size: 25px;
     max-height: 30px;
+
+line-height: 1em;
 }
 
     .file-title .file-name {
@@ -255,18 +258,17 @@ input:focus {
     }
 
     .file-title .file-extension {
-        color: #808080;
+		color: #6C6E83;
     }
 
 .file-info {
-max-height: 25px;
-margin-top: 38px;
-margin-left: 10px;
+margin-top: 7px;
+margin-bottom: 5px;
 }
 
     .file-info .file-info-bit {
         float: left;
-        min-width: 130px;
+//         min-width: 130px;
         margin-right: 30px;
     }
 
@@ -279,11 +281,13 @@ margin-left: 10px;
     margin-right: 5px;
 }
 
+/*
 .file-size {
     margin-left: 10px;
     margin-top: 65px;
     font-size: 12px;
 }
+*/
 
 .delete {
     float:right;
@@ -303,9 +307,9 @@ margin-left: 10px;
     }
 
 	.delete i {
-		margin-top: 43px;
-		margin-left: 8px;
-		transition: .3s ease-out;
+	margin-top: 46px;
+	margin-left: 8px;
+	transition: .3s ease-out;
     }
 
 
@@ -316,22 +320,22 @@ margin-left: 10px;
     margin-top: -9px;
 }
 
-    .copy p {
-        color: white;
-        margin-top: 36px;
-        margin-left: 30px;
+	.copy p {
+		color: white;
+		margin-top: 41px;
+		margin-left: 30px;
     }
 
 .progress-background {
     display: block;
     height: 100px;
     width: 96%;
-    background-color: rgba(71, 81, 97, .9);
+//     background-color: rgba(71, 81, 97, .9);
 }
 
 .progress {
-    background-color: rgb(71,81,97);
-    height: 100%;
+background-color: rgba(71, 81, 97, 0.90);
+height: 100%;
 }
 
 .progress-bar {
