--- a/src/app/landing/landing.tpl.html
+++ b/src/app/landing/landing.tpl.html
@@ -172,12 +172,12 @@
 
 <footer>
     <div class="container">
-        <div class="footer-author col-md-6">
-            <img src="assets/images/logo_circ.png">
+        <div class="footer-author col-xs-6">
+            <img src="assets/images/logo_circ.png" class="f_logo">
             <p>made by</p>
             <p class="us">Eliot Fowler + Andrew Acree</p>
         </div>
-        <div class="footer-copyright col-md-6">
+        <div class="footer-copyright col-xs-6">
             <p class="copyright">© 2014 Just Cause. All Rights Reserved. </p>
             <ul class="footer-action">
                 <li><a class="small" href="#">Privacy Policy</i></a></li>
